2015-06-08  Ryosuke Niwa  <rniwa@webkit.org>

        Unreviewed build fix. Initialize result in the case things blow up below.

        * Scripts/webkitpy/benchmark_runner/benchmark_runner.py:
        (BenchmarkRunner.execute):

2015-06-08  Ryosuke Niwa  <rniwa@webkit.org>

        Partially revert and fix after r185243.

        * Scripts/benchmark_runner/benchmark_runner.py:
        * Scripts/run-benchmark:

2015-06-08  Daniel Bates  <dabates@apple.com>

        Many LayoutTests/http tests time out in DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=145770
        <rdar://problem/19593910>

        Reviewed by Alexey Proskuryakov.

        * DumpRenderTree/ios/Info.plist: Add ATS key.
        * LayoutTestRelay/LayoutTestRelay/LTRelayController.m:
        (-[LTRelayController _environmentVariables]): Copy environment variables LOCAL_RESOURCE_ROOT
        and DUMPRENDERTREE_TEMP to the simulator environment to avoid assertion failures in tests
        that make use of testRunner.pathToLocalResource().

2015-06-08  Csaba Osztrogonác  <ossy@webkit.org>

        [GTK] Fix parentheses warning in TestWebKitWebView.cpp
        https://bugs.webkit.org/show_bug.cgi?id=145759

        Reviewed by Carlos Garcia Campos.

        * TestWebKitAPI/Tests/WebKit2Gtk/TestWebKitWebView.cpp:
        (testWebViewSave):

2015-06-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add editor mode to MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=145595

        Reviewed by Sergio Villar Senin.

        It loads an empty editable web view with an edit toolbar. It makes
        easier to test the editor, editing commands and input methods.

        * MiniBrowser/gtk/BrowserWindow.c:
        (editingCommandCallback):
        (browserWindowSetupEditorToolbar):
        (browserWindowConstructed):
        * MiniBrowser/gtk/main.c:
        (createBrowserWindow):

2015-06-05  Zalan Bujtas  <zalan@apple.com>
